swen430as1/tests/invalid/trycatch/TryCatch_Invalid_05.while
void f(int x) {
    try {
        x = x + 1;
    } catch(int y) {

    } catch(bool b) {
        int x = 1;
    }
}